--- a/emsi-sdia-app/customer-front-thymeleaf-app/src/main/resources/templates/template.html
+++ b/emsi-sdia-app/customer-front-thymeleaf-app/src/main/resources/templates/template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="www.thymeleaf.org"
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
@@ -33,11 +33,17 @@
             <ul class="navbar">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        [Username]
+                        <span th:text="${#authentication.name}">
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="#">Login</a></li>
-                        <li><a class="dropdown-item" href="#">Logout</a></li>
+                        <li><a class="dropdown-item" href="#">
+                                <form th:action="@{/logout}" method="post">
+                                    <button class="btn btn-warning" type="submit" value="Logout">
+                                        Logout
+                                    </button>
+                                </form>
+                        </a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="#">Profile</a></li>
                     </ul>
